Changes in version 2.38
-----------------------

* Bugfix for Ticket 35759: First arg to callback function evaluates
  to false when used in bool context.

Changes in version 2.37
-----------------------

* The first argument to callback function is now an object and will
  get methods for finer control in the future. The object stringifies
  to the option name, so current code should not notice a difference.

* Bugfix: With gnu_compat, --foo= will no longer trigger "Option
  requires an argument" but return the empty string.

Changes in version 2.36
-----------------------

**************** WARNING -- EXPERIMENTAL CODE AHEAD ****************

* Parsing options from an arbitrary array

  The entry point GetOptionsFromArray (exported on demand) can be used
  to parse command line options that are not passed in via @ARGV, but
  using an arbitrary array.

    use Getopt::Long qw(GetOptionsFromArray);
    $ret = GetOptionsFromArray(\@myopts, ...);

* Parsing options from an arbitrary string

  The entry point GetOptionsFromString (exported on demand) can be
  used to parse command line options that are not passed in via @ARGV,
  but using an arbitrary string.

    use Getopt::Long qw(GetOptionsFromString);
    $ret = GetOptionsFromString($optstring, ...);

  Note that upon completion, no arguments may remain in the string.
  If arguments may remain, call it in list context:

    ($ret, $args) = GetOptionsFromString($optstring, ...);

  @$args will have the remaining arguments.

**************** END EXPERIMENTAL CODE ****************

* Number values for options may include underscores for readability
  (just like Perls numbers).

* Bugfix for Ticket #19432 (found and fixed by khali).

* Bugfix to make it cooperate with the bignum pragma. Thanks to Merijn
  and Yves.

* Various small fixes to make the test suite run under 5.004_05.

* More examples (skeletons).

Changes in version 2.35
-----------------------

* long_prefix_pattern configuration variable.
